// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote is invalid 1`] = `
<Quote
  data={
    Array [
      "Pork",
      "rump",
      "minim,",
      "laborum",
      "spare",
      "ribs",
      "pancetta",
      "lorem",
      "ut",
      "meatloaf",
      "ullamco",
      "swine",
      "sint",
      "voluptate",
      "pariatur.",
      "Ullamco",
      "mollit",
      "consequat",
      "est.",
      "Esse",
      "brisket",
      "spare",
      "ribs",
      "ipsum",
      "eiusmod",
      "t-bone",
      "mollit",
      "veniam.",
      "Exercitation",
      "short",
      "loin",
      "filet",
      "mignon,",
      "tenderloin",
      "tail",
      "anim",
      "kevin",
      "ribeye",
      "minim",
      "beef",
      "velit",
      "esse",
      "salami.",
      "Rump",
      "et",
      "do",
      "landjaeger.",
    ]
  }
  index={0}
  isValid={false}
  length={1}
/>
`;

exports[`Quote is valid 1`] = `
<Quote
  data={
    Array [
      "Pork",
      "rump",
      "minim,",
      "laborum",
      "spare",
      "ribs",
      "pancetta",
      "lorem",
      "ut",
      "meatloaf",
      "ullamco",
      "swine",
      "sint",
      "voluptate",
      "pariatur.",
      "Ullamco",
      "mollit",
      "consequat",
      "est.",
      "Esse",
      "brisket",
      "spare",
      "ribs",
      "ipsum",
      "eiusmod",
      "t-bone",
      "mollit",
      "veniam.",
      "Exercitation",
      "short",
      "loin",
      "filet",
      "mignon,",
      "tenderloin",
      "tail",
      "anim",
      "kevin",
      "ribeye",
      "minim",
      "beef",
      "velit",
      "esse",
      "salami.",
      "Rump",
      "et",
      "do",
      "landjaeger.",
    ]
  }
  index={0}
  isValid={true}
  length={1}
/>
`;

exports[`Quote rendered correctly 1`] = `
<Quote
  data={
    Array [
      "Pork",
      "rump",
      "minim,",
      "laborum",
      "spare",
      "ribs",
      "pancetta",
      "lorem",
      "ut",
      "meatloaf",
      "ullamco",
      "swine",
      "sint",
      "voluptate",
      "pariatur.",
      "Ullamco",
      "mollit",
      "consequat",
      "est.",
      "Esse",
      "brisket",
      "spare",
      "ribs",
      "ipsum",
      "eiusmod",
      "t-bone",
      "mollit",
      "veniam.",
      "Exercitation",
      "short",
      "loin",
      "filet",
      "mignon,",
      "tenderloin",
      "tail",
      "anim",
      "kevin",
      "ribeye",
      "minim",
      "beef",
      "velit",
      "esse",
      "salami.",
      "Rump",
      "et",
      "do",
      "landjaeger.",
    ]
  }
  index={0}
  isValid={false}
  length={0}
/>
`;
